kubernetes/ingress/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ecommerce-ingress

spec:
  ingressClassName: nginx

  rules:

    - host: ecommerce.local

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: ecommerce-service

                port:

                  number: 80
